<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.MainActivity">

    <Button
        android:id="@+id/btnDestinos"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/btnredondo"
        android:text="@string/MisViajes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPedirMovil"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btnGPS"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/btnredondo"
        android:onClick="destinos"
        android:text="@string/GPS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintStart_toEndOf="@+id/btnInfo"
        app:layout_constraintTop_toBottomOf="@+id/btnPedirMovil"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnredondo"
        android:text="@string/Info"
        app:layout_constraintStart_toEndOf="@+id/btnDestinos"
        app:layout_constraintTop_toBottomOf="@+id/btnPedirMovil"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btnPedirMovil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="150dp"
        android:layout_weight="1"
        android:background="@drawable/btnredondo"
        android:text="@string/Pedir_Remis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/iVPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:contentDescription="@string/iVPrincipal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/iglesia" />

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="366dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/txt_titulo"
        android:textAlignment="center"
        android:textColorHint="@android:color/holo_orange_dark"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/txt_titulo" />


</androidx.constraintlayout.widget.ConstraintLayout>