<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.activity_Login"
    android:background="@color/teal_200">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:autoLink="email"
        android:autofillHints="true"
        android:ems="10"
        android:hint="@string/et_email"
        android:inputType="textEmailAddress"
        android:textColor="#232222"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:autofillHints="true"
        android:ems="10"
        android:hint="@string/et_pass"
        android:inputType="textPassword"
        android:textColor="#FF232222"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/et_confirmapass"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:autofillHints="true"
        android:ems="10"
        android:hint="@string/et_confirmapass"
        android:inputType="textPassword"
        android:textColor="#FF232222"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pass"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="60dp"
        android:text="@string/btn_Registrarse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_confirmapass"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:text="@string/btn_Ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintStart_toEndOf="@+id/btnRegistrar"
        app:layout_constraintTop_toBottomOf="@+id/et_confirmapass"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>